--- a/src/Styles/Web.css
+++ b/src/Styles/Web.css
@@ -62,18 +62,47 @@
 @media (max-width: 576px) {
   #developer {
     margin-top: -20px;
-    font-size: 40px;
-    padding-left: 60px;
+    font-size: 30px;
+    padding-left: 0;
+    justify-content: center;
 
     & span{
       display: none;
     }
   }
   #parrafo{
-    margin-left: 60px;
-    max-width: 330px;
+    margin-left: 0px;
+    padding-left: 20px;
+    padding-right: 20px;
+    max-width: auto;
     font-size: 12px;
+    text-align: center;
+    text-wrap: pretty;
+
   }
 
+  #a {
+    background-color: #f0f0ff;
+    width: 240px;
+    height: 52px;
+    font-family: "Montserrat", sans-serif;
+    font-weight: bold;
+    font-size: 16px;
+    margin-left: 0px;
+    margin-bottom: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.877);
+    transition: box-shadow 0.3s ease;
+    transition: transform 0.3s ease-in-out; /* Agrega una transición suave a la transformación */
+    &:hover {
+      transform: scale(1.1);
+    }
+    &:active {
+      transform: scale(0.95); /* Reducir ligeramente el tamaño cuando se presiona el botón */
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); /* Cambiar la sombra para dar retroalimentación visual */
+    }
+  }
 
 }
