--- a/src/Styles/Portfolio.css
+++ b/src/Styles/Portfolio.css
@@ -1,7 +1,10 @@
 #container {
+  justify-content: center;
+  align-items: center;
   margin-left: 100px;
   margin-right: 100px;
 }
+
 #portfolio {
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
@@ -81,34 +84,15 @@
   border-width: 1px;
   margin-bottom: 50px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.877);
-  transition: transform 0.3s ease-in-out; /* Agrega una transición suave a la transformación */
-  &:hover {
-    transform: scale(1.1);
-  }
-  &:active {
-    transform: scale(0.95); /* Reducir ligeramente el tamaño cuando se presiona el botón */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); /* Cambiar la sombra para dar retroalimentación visual */
-  }
-}
-
-#parrafo3 {
-  font-family: "inter", sans-serif;
-  font-weight: normal;
-  font-size: 16px;
-  color: #ccc;
-  text-wrap: pretty;
-  width: 550px;
-  margin-bottom: 90px;
+  transition: transform 0.3s ease-in-out;
 }
 
 #spanbutton {
   gap: 30px;
 }
 
-#codigodesactivado1 {
+#codigodesactivado1, #codigodesactivado2 {
   background-color: #101010;
-  width: 152px;
-  height: 52px;
   font-family: "Montserrat", sans-serif;
   font-weight: bold;
   font-size: 16px;
@@ -117,21 +101,6 @@
   margin-bottom: 50px;
   cursor: not-allowed;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.877);
-}
-#codigodesactivado2 {
-  background-color: #101010;
-  width: 204px;
-  height: 52px;
-  font-family: "Montserrat", sans-serif;
-  font-weight: bold;
-  font-size: 16px;
-  border: 1px solid #212121;
-  color: #212121;
-  margin-bottom: 50px;
-  cursor: not-allowed;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.877);
-  margin-left: 30px;
-  margin-bottom: 32;
 }
 
 #herramientas {
@@ -141,4 +110,44 @@
   color: #f0f0ff;
   margin-top: 10px;
   margin-bottom: -10px;
+}
+
+@media (max-width: 576px) {
+
+  #container {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  #proyecto {
+    display: flex;
+    flex-direction: column; /* Apilar la imagen y la información */
+    gap: 20px; /* Espacio entre la imagen y la información */
+    align-items: center; /* Centra los elementos */
+  }
+
+  #imagenProyecto {
+    width: 100%; /* La imagen ocupa todo el ancho del contenedor */
+    max-width: 350px; /* Tamaño máximo para mantener la consistencia */
+    height: auto; /* Mantiene las proporciones */
+  }
+
+  #informacion {
+    width: 100%;
+    text-align: center; /* Centra el texto de la información */
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Asegura que el contenido esté centrado */
+  }
+
+  #titulo, #tecnologias, #parrafo2, #parrafo3 {
+    width: 100%;
+    text-align: center; /* Alinea los textos al centro */
+  }
+
+  #parrafo2, #parrafo3 {
+    width: 100%;
+    max-width: 350px; /* Limita el ancho del texto */
+    text-wrap: pretty;
+  }
 }
