--- a/src/Styles/Nav.css
+++ b/src/Styles/Nav.css
@@ -46,6 +46,111 @@
   transition: all 0.2s linear;
 }
 
+@media (max-width: 768px) {
+  /* Estilos específicos para tabletas */
+  .navbar {
+    position: fixed;
+    background-color: #212121;
+    padding: 1rem;
+    border-radius: 50px;
+    left: 20px;
+    top: 5px;
+  }
+
+  .nav_items {
+    display: flex;
+    position: absolute;
+    justify-content: left;
+    align-items: flex-start;
+    top: 80px;
+    left: 0;
+    margin-left: -0px;
+    padding-left: 20px;
+    padding-top: 20px;
+    background: #212121;
+    flex-direction: column;
+    width: 300px;
+    height: calc(100vh - 60px);
+    transform: translateX(-180%);
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
+    transition: transform 0s ease-in-out;
+  }
+
+  .nav_items.open {
+    transform: translateX(0);
+  }
+
+  .nav_toggle {
+    display: flex;
+  }
+
+  .nav_toggle.open span:nth-child(1) {
+    transform: rotate(45deg) translate(5px, 5px);
+  }
+
+  .nav_toggle.open span:nth-child(2) {
+    opacity: 0;
+  }
+
+  .nav_toggle.open span:nth-child(3) {
+    transform: rotate(-45deg) translate(5px, -5px);
+  }
+}
+
+@media (max-width: 425px) {
+  /* Estilos específicos para móviles */
+
+  .navbar {
+    position: fixed;
+    background-color: #212121;
+    padding: 1rem;
+    border-radius: 50px;
+    left: 20px;
+    top: 5px;
+  }
+
+  .nav_items {
+    display: flex;
+    position: absolute;
+    justify-content: left;
+    align-items: flex-start;
+    top: 80px;
+    left: 0;
+    margin-left: -0px;
+    padding-left: 20px;
+    padding-top: 20px;
+    background: #212121;
+    flex-direction: column;
+    width: 300px;
+    height: calc(100vh - 60px);
+    transform: translateX(-180%);
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
+    transition: transform 0s ease-in-out;
+  }
+
+  .nav_items.open {
+    transform: translateX(0);
+  }
+
+  .nav_toggle {
+    display: flex;
+  }
+
+  .nav_toggle.open span:nth-child(1) {
+    transform: rotate(45deg) translate(5px, 5px);
+  }
+
+  .nav_toggle.open span:nth-child(2) {
+    opacity: 0;
+  }
+
+  .nav_toggle.open span:nth-child(3) {
+    transform: rotate(-45deg) translate(5px, -5px);
+  }
+}
+
 /* Responsive styles */
 @media (max-width: 576px) {
   .navbar {
@@ -59,7 +164,7 @@
 
   .nav_items {
     display: flex;
-    position: fixed;
+    position: absolute;
     justify-content: left;
     align-items: flex-start;
     top: 80px;
