--- a/src/Styles/Nav.css
+++ b/src/Styles/Nav.css
@@ -46,7 +46,7 @@
   transition: all 0.2s linear;
 }
 
-@media (max-width: 576px) {
+@media (max-width: 768px) {
   .navbar {
     position: fixed; /* Mantener la barra en la parte superior */
     background-color: #212121;
@@ -59,7 +59,7 @@
 
   .nav_items {
     display: flex;
-    position: absolute; /* Cambia a absolute para que no interfiera con el scroll */
+    position: fixed; /* Cambia a fixed para que se desplace con el contenido */
     justify-content: left;
     align-items: flex-start;
     top: 80px; /* Ajusta según la altura de tu barra de navegación */
@@ -75,6 +75,113 @@
     font-weight: 400;
     transition: transform 0.3s ease-in-out; /* Cambia el tiempo de la transición para que sea más fluido */
   }
+
+
+  .nav_items.open {
+    transform: translateX(0);
+  }
+
+  .nav_toggle {
+    display: flex;
+  }
+
+  .nav_toggle.open span:nth-child(1) {
+    transform: rotate(45deg) translate(5px, 5px);
+  }
+
+  .nav_toggle.open span:nth-child(2) {
+    opacity: 0;
+  }
+
+  .nav_toggle.open span:nth-child(3) {
+    transform: rotate(-45deg) translate(5px, -5px);
+  }
+}
+
+@media (max-width: 425px) {
+  /* Estilos específicos para móviles */
+
+  .navbar {
+    position: fixed; /* Mantener la barra en la parte superior */
+    background-color: #212121;
+    padding: 1rem;
+    border-radius: 50px;
+    left: 20px;
+    top: 5px;
+    z-index: 10; /* Asegúrate de que la barra esté en la parte superior */
+  }
+
+  .nav_items {
+    display: flex;
+    position: fixed; /* Cambia a fixed para que se desplace con el contenido */
+    justify-content: left;
+    align-items: flex-start;
+    top: 80px; /* Ajusta según la altura de tu barra de navegación */
+    left: 0;
+    padding-left: 20px;
+    padding-top: 20px;
+    background: #212121;
+    flex-direction: column;
+    width: 300px;
+    height: calc(100vh - 80px); /* Asegúrate de que no se superponga con la barra de navegación */
+    transform: translateX(-180%);
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
+    transition: transform 0.3s ease-in-out; /* Cambia el tiempo de la transición para que sea más fluido */
+  }
+
+  .nav_items.open {
+    transform: translateX(0);
+  }
+
+  .nav_toggle {
+    display: flex;
+  }
+
+  .nav_toggle.open span:nth-child(1) {
+    transform: rotate(45deg) translate(5px, 5px);
+  }
+
+  .nav_toggle.open span:nth-child(2) {
+    opacity: 0;
+  }
+
+  .nav_toggle.open span:nth-child(3) {
+    transform: rotate(-45deg) translate(5px, -5px);
+  }
+}
+
+/* Responsive styles */
+@media (max-width: 576px) {
+  .navbar {
+    position: fixed; /* Mantener la barra en la parte superior */
+    background-color: #212121;
+    padding: 1rem;
+    border-radius: 50px;
+    left: 20px;
+    top: 5px;
+    z-index: 10; /* Asegúrate de que la barra esté en la parte superior */
+  }
+
+  .nav_items {
+    display: flex;
+    position: fixed; /* Cambia a fixed para que se desplace con el contenido */
+    justify-content: left;
+    align-items: flex-start;
+    top: 80px; /* Ajusta según la altura de tu barra de navegación */
+    left: 0;
+    padding-left: 20px;
+    padding-top: 20px;
+    background: #212121;
+    flex-direction: column;
+    width: 300px;
+    height: calc(100vh - 80px); /* Asegúrate de que no se superponga con la barra de navegación */
+    transform: translateX(-180%);
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
+    transition: transform 0.3s ease-in-out; /* Cambia el tiempo de la transición para que sea más fluido */
+  }
+
 
   .nav_items.open {
     transform: translateX(0);
