--- a/src/Styles/Carrousel.css
+++ b/src/Styles/Carrousel.css
@@ -65,3 +65,75 @@ img {
   font-size: 12px;
   color: #a0a0a0;
 }
+
+@media (max-width: 576px) { 
+
+  .m-scroll {
+    display: flex;
+    position: relative;
+    width: calc(100% - 70px);
+    height: 120px;
+    margin: 0 auto;
+    overflow: hidden;
+    z-index: 1;
+    mask-image: linear-gradient(
+      to left,
+      rgba(0, 0, 0, 0),
+      rgba(0, 0, 0, 1) 10%,
+      rgba(0, 0, 0, 1) 90%,
+      rgba(0, 0, 0, 0)
+    );
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
+  
+  .m-scroll__title {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    width: max-content; /* Permitir que el contenido se expanda según sea necesario */
+    height: 100%;
+    white-space: nowrap;
+  }
+  
+  .scroller-inner {
+    display: flex;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    animation: scrollText 40s linear infinite;
+  }
+  
+  .scroller-inner li {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-right: 20px; /* Ajusta el margen entre imágenes según sea necesario */
+    width: 60px;
+    height: 60px;
+  }
+  
+  img {
+    max-width: 100%;
+    max-height: 100%; /* Ajusta el tamaño de las imágenes según sea necesario */
+  }
+  
+  @keyframes scrollText {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(calc(-100% / 2)); /* Desplaza todo el contenido */
+    }
+  }
+  
+  #cajon p {
+    margin-top: 5px;
+    font-family: "inter", sans-serif;
+    font-weight: 300;
+    font-size: 12px;
+    color: #a0a0a0;
+  }
+
+}
